@@ -1,3 +1,7 @@
+2007-09-16  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* src/twitux-tweet-list.[ch]: create separate listview object.
+
 2007-09-14  Brian Pepple  <bpepple@fedoraproject.org>
 
 	* data/main.glade:
